parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@dict.py-10.snap
---
source: parser/src/lexer/mod.rs
description: "di = {1: \"name\", **{2: \"name2\"}, 3: \"name3\"}\n"
input_file: parser/test_data/inputs/one_liners/dict.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "di",
        ),
        start: 0,
        end: 2,
    },
    Token {
        kind: Assign,
        value: None,
        start: 3,
        end: 4,
    },
    Token {
        kind: LeftBracket,
        value: None,
        start: 5,
        end: 6,
    },
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: Colon,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "\"name\"",
        ),
        start: 9,
        end: 15,
    },
    Token {
        kind: Comma,
        value: None,
        start: 15,
        end: 16,
    },
    Token {
        kind: Pow,
        value: None,
        start: 17,
        end: 19,
    },
    Token {
        kind: LeftBracket,
        value: None,
        start: 19,
        end: 20,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 20,
        end: 21,
    },
    Token {
        kind: Colon,
        value: None,
        start: 21,
        end: 22,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "\"name2\"",
        ),
        start: 23,
        end: 30,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 30,
        end: 31,
    },
    Token {
        kind: Comma,
        value: None,
        start: 31,
        end: 32,
    },
    Token {
        kind: Integer,
        value: Number(
            "3",
        ),
        start: 33,
        end: 34,
    },
    Token {
        kind: Colon,
        value: None,
        start: 34,
        end: 35,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "\"name3\"",
        ),
        start: 36,
        end: 43,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 43,
        end: 44,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 44,
        end: 45,
    },
]
