parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@dict.py-3.snap
---
source: parser/src/lexer/mod.rs
description: "{a: b\n, c: d},"
input_file: parser/test_data/inputs/one_liners/dict.py
---
[
    Token {
        kind: LeftBracket,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 1,
        end: 2,
    },
    Token {
        kind: Colon,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 4,
        end: 5,
    },
    Token {
        kind: Comma,
        value: None,
        start: 6,
        end: 7,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 8,
        end: 9,
    },
    Token {
        kind: Colon,
        value: None,
        start: 9,
        end: 10,
    },
    Token {
        kind: Identifier,
        value: Str(
            "d",
        ),
        start: 11,
        end: 12,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 12,
        end: 13,
    },
    Token {
        kind: Comma,
        value: None,
        start: 13,
        end: 14,
    },
]
