parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@dict.py-7.snap
---
source: parser/src/lexer/lexer.rs
description: "{1: \"name\" for name in get_names()}"
input_file: parser/test_data/inputs/one_liners/dict.py
---
[
    Token {
        kind: LeftBracket,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 1,
        end: 2,
    },
    Token {
        kind: Colon,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "\"name\"",
        ),
        start: 4,
        end: 10,
    },
    Token {
        kind: For,
        value: None,
        start: 11,
        end: 14,
    },
    Token {
        kind: Identifier,
        value: Str(
            "name",
        ),
        start: 15,
        end: 19,
    },
    Token {
        kind: In,
        value: None,
        start: 20,
        end: 22,
    },
    Token {
        kind: Identifier,
        value: Str(
            "get_names",
        ),
        start: 23,
        end: 32,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 32,
        end: 33,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 33,
        end: 34,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 34,
        end: 35,
    },
]
